<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yellowflash.drugsbazaar.RegistrationActivity">

    <include
        android:id="@+id/tb_registration"
        layout="@layout/toolbar" />

    <EditText
        android:id="@+id/et_reg_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tb_registration"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:maxLines="1" />

    <EditText
        android:id="@+id/et_reg_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_reg_name"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/hint_address"
        android:inputType="textPostalAddress"
        android:maxLines="1" />

    <EditText
        android:id="@+id/et_reg_town"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_reg_address"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/hint_town"
        android:inputType="textPersonName"
        android:maxLines="1" />

    <EditText
        android:id="@+id/et_reg_dl_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_reg_town"
        android:layout_margin="5dp"
        android:hint="@string/hint_dl_num"
        android:maxLines="1" />

    <EditText
        android:id="@+id/et_reg_tin_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_reg_dl_number"
        android:layout_margin="5dp"
        android:hint="@string/hint_tin_num"
        android:maxLines="1" />

    <EditText
        android:id="@+id/et_reg_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_reg_tin_number"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/hint_phne"
        android:inputType="phone"
        android:maxLines="1" />

    <Spinner
        android:id="@+id/spn_reg_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_reg_phone"
        android:layout_margin="5dp"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/btn_reg_complete"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spn_reg_type"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Complete Registration" />

</RelativeLayout>
